welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
	while ( vacation = false ) {
                         ^alarmClock:10: error: reassignment to val
	while (vacation = true ) {
                        ^alarmClock:10: error: type mismatch;
 found   : Unit
 required: String
	while (vacation = true ) {
        ^