welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	while ( vacation = false ) {
		if(day == 1 ||day == 2 ||day == 3 || day == 4 ||day == 5) {
		return "7:00";}
		else {
	
		return "10:00";
	}
	} 
	while (vacation = true ) {
		if (day == 1 ||day == 2 ||day == 3 || day == 4 ||day == 5){
	
		return "10:00" ;
		} else {
		return "off";
	
	}
	}
}
